--- a/Klike/Sources/Controllers/KLEventRemindPageCell.xib
+++ b/Klike/Sources/Controllers/KLEventRemindPageCell.xib
@@ -19,8 +19,8 @@
                                 <rect key="frame" x="0.0" y="-1" width="133" height="56"/>
                                 <color key="backgroundColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Remind Me" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhK-el-pXC">
-                                <rect key="frame" x="149" y="18" width="119" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remind Me" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhK-el-pXC">
+                                <rect key="frame" x="171.5" y="20" width="74" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -80,11 +80,13 @@
                             <constraint firstAttribute="bottom" secondItem="dL2-VR-FKS" secondAttribute="bottom" id="dIF-Jb-dTx"/>
                             <constraint firstAttribute="bottom" secondItem="aee-rv-rbf" secondAttribute="bottom" id="fU4-ZE-vxu"/>
                             <constraint firstItem="TzP-Uf-ASC" firstAttribute="leading" secondItem="QVE-Uk-yFz" secondAttribute="leading" constant="95" id="ib9-8I-3Xh"/>
+                            <constraint firstItem="AhK-el-pXC" firstAttribute="centerY" secondItem="aee-rv-rbf" secondAttribute="centerY" constant="1" id="k1P-b8-2wr"/>
                             <constraint firstItem="aee-rv-rbf" firstAttribute="top" secondItem="QVE-Uk-yFz" secondAttribute="top" id="mxN-xO-9Cd"/>
                             <constraint firstItem="dL2-VR-FKS" firstAttribute="leading" secondItem="QVE-Uk-yFz" secondAttribute="leading" id="ox2-Z6-Woc"/>
                             <constraint firstItem="gX8-gB-acG" firstAttribute="top" secondItem="QVE-Uk-yFz" secondAttribute="top" constant="1" id="qKV-HB-pQt"/>
                             <constraint firstAttribute="bottom" secondItem="gX8-gB-acG" secondAttribute="bottom" constant="-1" id="tJM-vh-42C"/>
                             <constraint firstAttribute="trailing" secondItem="aee-rv-rbf" secondAttribute="trailing" id="yNn-Ed-XkX"/>
+                            <constraint firstItem="AhK-el-pXC" firstAttribute="centerX" secondItem="aee-rv-rbf" secondAttribute="centerX" constant="-11.5" id="zF7-ST-sVy"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -107,6 +109,7 @@
                 <outlet property="_imageSeparator" destination="TzP-Uf-ASC" id="oSg-Gu-iSh"/>
                 <outlet property="_imageStar" destination="iSj-UJ-L0v" id="g9G-5T-UIo"/>
                 <outlet property="_labeSave" destination="j2z-Qg-Ap5" id="oce-1d-Bjg"/>
+                <outlet property="_labelRemin" destination="AhK-el-pXC" id="HK2-Vw-uKK"/>
                 <outlet property="_saveButton" destination="dL2-VR-FKS" id="2rj-Nu-cyM"/>
             </connections>
             <point key="canvasLocation" x="390" y="461"/>
