--- a/Klike/Interfaces/ThrowPricingView.xib
+++ b/Klike/Interfaces/ThrowPricingView.xib
@@ -46,10 +46,10 @@
                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOG-LD-jao">
-                    <rect key="frame" x="15" y="132" width="290" height="80"/>
+                    <rect key="frame" x="15" y="132" width="290" height="96"/>
                     <attributedString key="attributedText">
                         <fragment>
-                            <string key="content">Payments will be accepted in a day after the start of your event then we’ll payout to your bank account 2 business days later. User will be charged 2.9% + $0.3 by Stripe for processing. Konvene takes a 2% comission. </string>
+                            <string key="content">Payments will be accepted in a day after the start of your event then we’ll payout to your bank account 2 business days later. Attendees will be charged the price of the event plus 2.9% + $0.3 by Stripe for processing. Konvene takes a 2% comission out of the Host's price. </string>
                             <attributes>
                                 <font key="NSFont" size="12" name="HelveticaNeue"/>
                                 <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" minimumLineHeight="16"/>
@@ -66,14 +66,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_alert" translatesAutoresizingMaskIntoConstraints="NO" id="seH-hR-r52">
-                    <rect key="frame" x="16" y="227" width="16" height="16"/>
+                    <rect key="frame" x="16" y="243" width="16" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="0x2-NW-mTv"/>
                         <constraint firstAttribute="width" constant="16" id="1vu-MT-jI8"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nPn-QX-MFd">
-                    <rect key="frame" x="36" y="228" width="269" height="61"/>
+                    <rect key="frame" x="36" y="244" width="269" height="45"/>
                     <attributedString key="attributedText">
                         <fragment content="Once someone has accepted invite to your event you will be unable to change the pricing options.">
                             <attributes>
