--- a/Klike/Interfaces/PaySettingsFooter.xib
+++ b/Klike/Interfaces/PaySettingsFooter.xib
@@ -7,12 +7,27 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KLPaySettingsFooter">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="132"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="188"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0mU-NN-G5h">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
                     <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ok-r2-nOt">
+                            <rect key="frame" x="89" y="72" width="153" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="153" id="HHJ-dd-yTO"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
+                            <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="1"/>
+                            <state key="normal" title="Connect to Stripe" backgroundImage="big_btn">
+                                <color key="titleColor" red="0.4549019608" green="0.40000000000000002" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="disabled" backgroundImage="big_btn_disabled">
+                                <color key="titleColor" red="0.56862745100000001" green="0.56862745100000001" blue="0.62352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5U-TX-Xb8">
                             <rect key="frame" x="89" y="16" width="153" height="40"/>
                             <constraints>
@@ -31,13 +46,22 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="72" id="8aN-8C-x02"/>
+                        <constraint firstItem="6ok-r2-nOt" firstAttribute="top" secondItem="S5U-TX-Xb8" secondAttribute="bottom" constant="16" id="69U-oL-Ka1"/>
+                        <constraint firstAttribute="height" constant="128" id="8aN-8C-x02"/>
                         <constraint firstAttribute="centerX" secondItem="S5U-TX-Xb8" secondAttribute="centerX" constant="-5" id="Ijf-ja-uWJ"/>
-                        <constraint firstAttribute="centerY" secondItem="S5U-TX-Xb8" secondAttribute="centerY" id="xb4-fn-0BQ"/>
+                        <constraint firstAttribute="centerX" secondItem="6ok-r2-nOt" secondAttribute="centerX" constant="-5.5" id="ZS4-WB-QLr"/>
+                        <constraint firstAttribute="centerX" secondItem="S5U-TX-Xb8" secondAttribute="centerX" constant="-5.5" id="r8G-hE-HiP"/>
+                        <constraint firstAttribute="bottom" secondItem="6ok-r2-nOt" secondAttribute="bottom" constant="16" id="umb-rx-Chq"/>
+                        <constraint firstItem="S5U-TX-Xb8" firstAttribute="top" secondItem="0mU-NN-G5h" secondAttribute="top" constant="16" id="y3Y-7F-3Fz"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Ijf-ja-uWJ"/>
+                        </mask>
+                    </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="drh-do-Uno">
-                    <rect key="frame" x="0.0" y="76" width="320" height="56"/>
+                    <rect key="frame" x="0.0" y="132" width="320" height="56"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="otA-hL-ojS">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
@@ -98,9 +122,10 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="addCardButton" destination="S5U-TX-Xb8" id="Wyy-u3-bJr"/>
+                <outlet property="connectToStripeButton" destination="6ok-r2-nOt" id="oBg-nS-ryp"/>
                 <outlet property="paymentHistoryButton" destination="otA-hL-ojS" id="1AN-Qt-DnJ"/>
             </connections>
-            <point key="canvasLocation" x="188" y="132"/>
+            <point key="canvasLocation" x="188" y="160.5"/>
         </view>
     </objects>
     <resources>
