--- a/Klike/Interfaces/CardCell.xib
+++ b/Klike/Interfaces/CardCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -14,7 +14,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3yY-wA-39D">
-                        <rect key="frame" x="16" y="4" width="288" height="79"/>
+                        <rect key="frame" x="16" y="1" width="288" height="79.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIO-Ze-zKv">
                                 <rect key="frame" x="16" y="20" width="30" height="19"/>
@@ -22,13 +22,6 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRJ-zg-kDU">
-                                <rect key="frame" x="246" y="28" width="27" height="24"/>
-                                <color key="tintColor" red="0.41176470590000003" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" image="profile_ic_top">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XXXX-1234" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6d-1L-fxH">
                                 <rect key="frame" x="16" y="50" width="61" height="14"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
@@ -39,10 +32,8 @@
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" priority="999" constant="79" id="KQX-R8-YbX"/>
-                            <constraint firstAttribute="trailing" secondItem="oRJ-zg-kDU" secondAttribute="trailing" constant="15" id="V3q-DA-XUa"/>
                             <constraint firstItem="TIO-Ze-zKv" firstAttribute="top" secondItem="3yY-wA-39D" secondAttribute="top" constant="20" id="VWF-4s-Ynx"/>
                             <constraint firstItem="L6d-1L-fxH" firstAttribute="leading" secondItem="3yY-wA-39D" secondAttribute="leading" constant="16" id="cqE-wg-cTp"/>
-                            <constraint firstAttribute="centerY" secondItem="oRJ-zg-kDU" secondAttribute="centerY" constant="-0.5" id="dlp-Ou-cX9"/>
                             <constraint firstItem="TIO-Ze-zKv" firstAttribute="leading" secondItem="3yY-wA-39D" secondAttribute="leading" constant="16" id="mxf-TL-oQN"/>
                             <constraint firstItem="L6d-1L-fxH" firstAttribute="top" secondItem="TIO-Ze-zKv" secondAttribute="baseline" constant="15" id="oly-g1-Mqi"/>
                         </constraints>
@@ -50,8 +41,8 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="3yY-wA-39D" firstAttribute="leading" secondItem="vi9-Jb-gm9" secondAttribute="leading" constant="16" id="7F8-uP-J13"/>
-                    <constraint firstItem="3yY-wA-39D" firstAttribute="top" secondItem="vi9-Jb-gm9" secondAttribute="top" constant="4" id="fv6-2B-aTx"/>
-                    <constraint firstAttribute="bottom" secondItem="3yY-wA-39D" secondAttribute="bottom" id="ygB-0M-Os1"/>
+                    <constraint firstItem="3yY-wA-39D" firstAttribute="top" secondItem="vi9-Jb-gm9" secondAttribute="top" constant="1" id="fv6-2B-aTx"/>
+                    <constraint firstAttribute="bottom" secondItem="3yY-wA-39D" secondAttribute="bottom" constant="3" id="ygB-0M-Os1"/>
                     <constraint firstAttribute="trailing" secondItem="3yY-wA-39D" secondAttribute="trailing" constant="16" id="zfx-1b-bYI"/>
                 </constraints>
             </tableViewCellContentView>
@@ -59,12 +50,8 @@
                 <outlet property="cardBGView" destination="3yY-wA-39D" id="enV-I0-I7p"/>
                 <outlet property="cardNameLabel" destination="TIO-Ze-zKv" id="1qf-o1-vtA"/>
                 <outlet property="cardNumberLabel" destination="L6d-1L-fxH" id="zh1-pP-qQ3"/>
-                <outlet property="settingsButton" destination="oRJ-zg-kDU" id="7QG-PF-cF6"/>
             </connections>
             <point key="canvasLocation" x="462" y="276"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="profile_ic_top" width="27" height="24"/>
-    </resources>
 </document>
