--- a/Klike/Interfaces/EventFooterView.xib
+++ b/Klike/Interfaces/EventFooterView.xib
@@ -115,7 +115,7 @@
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arr_up" translatesAutoresizingMaskIntoConstraints="NO" id="5NF-G0-Etl">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="arr_up" translatesAutoresizingMaskIntoConstraints="NO" id="5NF-G0-Etl">
                             <rect key="frame" x="291" y="20" width="13" height="8"/>
                         </imageView>
                     </subviews>
