--- a/Klike/Interfaces/ExplorePeopleCell.xib
+++ b/Klike/Interfaces/ExplorePeopleCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -124,6 +124,7 @@
                 <outlet property="eventsCountLabel" destination="7DW-WG-MR7" id="tWr-6U-4BN"/>
                 <outlet property="followButton" destination="EFe-gI-BHt" id="i5Q-6S-piG"/>
                 <outlet property="followersCountLabel" destination="cwT-cv-IOl" id="Dx5-Nz-Rng"/>
+                <outlet property="separator" destination="hDX-M7-I8y" id="p50-ce-yfx"/>
                 <outlet property="userImageView" destination="A32-oX-yG6" id="66s-hY-spN"/>
                 <outlet property="userNameLabel" destination="OlY-KR-Vg4" id="k3t-3p-8FD"/>
             </connections>
