--- a/Klike/Interfaces/UserListCell.xib
+++ b/Klike/Interfaces/UserListCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -69,6 +69,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="followButton" destination="3JM-hs-9D3" id="2uo-Xx-hVG"/>
+                <outlet property="separator" destination="oZ8-IK-DF2" id="oLh-MJ-hUz"/>
                 <outlet property="userImageView" destination="Kj4-ba-gIB" id="1G6-P0-Vhg"/>
                 <outlet property="userNameLabel" destination="7h5-bS-vr0" id="ogf-Jy-3h5"/>
             </connections>
